--- a/style.css
+++ b/style.css
@@ -49,5 +49,26 @@ body {
     /* transform: scale(0.98); */
 }
 .container .card:hover h2 {
+    transition: 0.2s;
+}
+.container .card:hover h2 {
     transform: scale(1.15);
 }
+.container .card .content-box a {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 20px;
+    border-radius: 40px;
+    font-size: 1rem;
+    color: #32a3b1;
+    text-decoration: none;
+    box-shadow: -4px -4px 12px rgba(255, 255, 255, 1),
+                  4px 4px 12px rgba(0, 0, 0, 0.1);
+    
+}
+.container .card .content-box a:hover {
+    box-shadow: 2px 2px 12px rgba(255, 255, 255, 1),
+                  -2px -2px 12px rgba(0, 0, 0, 0.1);
+    font-weight: 600;
+}
+
